freebsd 11 - work copy

--- a/config.cpp.template
+++ b/config.cpp.template
@@ -1,6 +1,7 @@
 #include "config.h"
 
 config::config() {
+	clean_peer_on_start = false;
 	host = "127.0.0.1";
 	port = 34000;
 	max_connections = 512;
@@ -24,4 +25,5 @@ config::config() {
 	site_password = "**********"; // MUST BE 10 CHARS
 	// Key to use for /report?get=stats and /report?get=user&key=<passkey> requests
 	report_password = "**********"; // MUST BE 10 CHARS
+	torrent_pass_private_key = "******************";
 }
