--- a/Makefile.in
+++ b/Makefile.in
@@ -100,7 +100,8 @@ PROGRAMS = $(bin_PROGRAMS)
 am_ocelot_OBJECTS = db.$(OBJEXT) events.$(OBJEXT) \
 	misc_functions.$(OBJEXT) ocelot.$(OBJEXT) report.$(OBJEXT) \
 	response.$(OBJEXT) schedule.$(OBJEXT) user.$(OBJEXT) \
-	worker.$(OBJEXT) log.$(OBJEXT) md5.$(OBJEXT)
+	worker.$(OBJEXT) log.$(OBJEXT) md5.$(OBJEXT) sha1.$(OBJEXT) \
+	stdafx.$(OBJEXT)
 nodist_ocelot_OBJECTS = config.$(OBJEXT)
 ocelot_OBJECTS = $(am_ocelot_OBJECTS) $(nodist_ocelot_OBJECTS)
 am__DEPENDENCIES_1 =
@@ -209,7 +210,7 @@ CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
-CXX = @CXX@
+CXX = clang++
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
@@ -302,11 +303,12 @@ top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
 ocelot_SOURCES = config.h db.cpp db.h events.cpp events.h misc_functions.cpp misc_functions.h\
 	ocelot.cpp ocelot.h report.cpp report.h response.cpp response.h \
-	schedule.cpp schedule.h user.cpp user.h worker.cpp worker.h log.cpp log.h md5.cpp md5.h
+	schedule.cpp schedule.h user.cpp user.h worker.cpp worker.h log.cpp log.h md5.cpp md5.h \
+	sha1.cpp sha1.h const_memory_range.h stdafx.cpp stdafx.h
 
 nodist_ocelot_SOURCES = config.cpp
 AM_CPPFLAGS = -std=c++11 -march=native -O2 -fvisibility=hidden -fvisibility-inlines-hidden -fomit-frame-pointer -fno-ident -pthread -Wall -Wfatal-errors -Wl,O1 -Wl,--as-needed $(BOOST_CPPFLAGS) -I$(MYSQLPP_INC_DIR) -I$(EV_INC_DIR) -I$(MYSQL_C_INC_DIR)
-ocelot_LDFLAGS = $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) -L$(MYSQLPP_LIB_DIR) -pthread
+ocelot_LDFLAGS = -static-libstdc++ $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) -L$(MYSQLPP_LIB_DIR) -pthread
 ocelot_LDADD = $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) -lev -lmysqlpp -lutil
 EXTRA_DIST = CHANGES LICENSE config.cpp.template
 all: all-am
@@ -410,6 +412,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/report.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/response.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/schedule.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sha1.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stdafx.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/user.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/worker.Po@am__quote@
 
